--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="has-navbar-fixed-top ">
+<html lang="fr" class="has-navbar-fixed-top has-background-black">
 
 <head>
   <meta charset="UTF-8">
@@ -56,6 +56,7 @@
     </div>
 
     </nav>
+    <!-- Hero and first film -->
     <div class="columns">
       <section class="is-fullheight-with-navbar column">
         <div class="hero-body p-0 is-halfheight " id="hero-body">
@@ -66,22 +67,28 @@
 
   </header>
   <main>
+<!-- Top5 title -->
   <div class="columns">
     <div class="column is-half">
         <p class="title is-size-12-mobile m-5 has-text-white">Top 5 des meilleurs films</p>
     </div>
   </div>
-
-    <div class=" columns has-background-black is-multiline is-fluid is-flex is-flex-direction-row is-justify-content-space-around "
-      id="top5">
+<!-- Top5 div -->
+    <div class=" columns has-background-black is-multiline is-fluid is-flex is-flex-direction-row is-justify-content-space-around "id="top5">
 
     
-
-
-
-
     </div>
+<!-- next title -->
+<div class="columns">
+  <div class="column is-half">
+      <p class="title is-size-12-mobile m-5 has-text-white">Prochainement</p>
+  </div>
+</div>
+<!-- next div -->
+  <div class=" columns has-background-black is-multiline is-fluid is-flex is-flex-direction-row is-justify-content-space-around "id="next5">
 
+  
+  </div>
 
 
 
