--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div id="navbarKK" class="navbar-menu has-background-black">
           <!-- Debut de la navbar -->
           <div class="navbar-start">
-            <a class="navbar-item has-text-white is-hovered">Films</a>
-            <a class="navbar-item has-text-white">Séries</a>
+            <a class="navbar-item has-text-white " id="film-mode">Films</a>
+            <a class="navbar-item has-text-white" id="tv-mode">Séries</a>
           </div>
           <!-- Fin de la navbar -->
           <div class="navbar-end is-flex-desktop is-align-items-center">
             <!-- Barre de recherche -->
             <input class="input is-normal navbar-item has-background-black has-text-white" type="text"
-              placeholder="Recherche" id="film-input">
+              placeholder="Recherche: Film" id="film-input">
             <!-- Bouton -->
             <button class="navbar-item button has-background-black border-color-black" id="search"><i
                 class="bi bi-search has-text-white"></i></button>
