--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
 
-    <div class="modal is-clipped" id="modal">
+    <div class="modal " id="modal">
       <div class="modal-content" id="modal-content">
 
       </div>
@@ -142,7 +142,7 @@
         <a class="my-2">Relations investisseurs</a>
         <a class="my-2">Confidentialité</a>
         <a class="my-2">Nous Contacter</a>
-        <p class="has-text-grey is-size-7"><i class="bi bi-c-circle "></i> Copyright 2003 KK, Inc</p>
+        
 
       </div>
       <div class="column is-centered is-2 is-flex is-flex-direction-column is-offset-1">
@@ -162,8 +162,16 @@
         <a class="my-2">Mentions légales</a>
       </div>
 
-    </div>
 
+      
+    </div>
+    <div class="columns">
+
+          <div class="column is-2 is-flex is-flex-direction-column">
+
+      <p class="has-text-grey is-size-7"><i class="bi bi-c-circle "></i> Copyright 2003 KK, Inc</p>
+    </div>
+    </div>
 
 
   </footer>
